adicionando autenticacao, criando usuario fixo no model e 1 teste de transferencia
